# fan-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
src/modules/: cli.rs  console.rs  fan.rs  log.rs  mod.rs  server.rs  temp.rs
