[package]
name = "fan-rs"
authors = ["SuperYY"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
rppal = "0.12"
regex = "*"
crossterm = "*"

[profile.release]
lto = true